[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/AI.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/separator.png" type="Texture" id=4]
[ext_resource path="res://src/LevelSingle.gd" type="Script" id=5]
[ext_resource path="res://assets/DoHyeon-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/anotherfont.tres" type="DynamicFont" id=7]
[ext_resource path="res://src/Player2.gd" type="Script" id=8]
[ext_resource path="res://assets/Kosugi-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/sounds/countdown-fx.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=4]
size = 90
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 368 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 96, 368 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 9 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="BlackBackg" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Score" type="CanvasLayer" parent="."]

[node name="ScR" type="Label" parent="Score"]
modulate = Color( 1, 1, 1, 0.333333 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -40.0
margin_right = -115.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
valign = 1

[node name="ScL" type="Label" parent="Score"]
modulate = Color( 1, 1, 1, 0.333333 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -40.0
margin_right = 173.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
valign = 1

[node name="Countdown" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Countdown"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 256.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="Wall" type="StaticBody2D" parent="."]

[node name="WallTop" type="CollisionShape2D" parent="Wall"]
position = Vector2( 640, -32 )
shape = SubResource( 1 )

[node name="WallBottom" type="CollisionShape2D" parent="Wall"]
position = Vector2( 640, 752 )
shape = SubResource( 1 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 360 )
scale = Vector2( 0.6, 0.6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 32, 360 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1248, 360 )
script = ExtResource( 8 )

[node name="AreaL" type="Area2D" parent="."]
monitorable = false

[node name="CollisionL" type="CollisionShape2D" parent="AreaL"]
position = Vector2( -96, 368 )
shape = SubResource( 2 )

[node name="AreaR" type="Area2D" parent="."]
position = Vector2( 1280, 0 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaR"]
position = Vector2( 96, 368 )
shape = SubResource( 3 )

[node name="Separator" type="CanvasLayer" parent="."]

[node name="Separador" type="TextureRect" parent="Separator"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -384.0
margin_right = 8.0
margin_bottom = 384.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HintLabel" type="CanvasLayer" parent="."]

[node name="WinCondition" type="Label" parent="HintLabel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -57.0
margin_right = 640.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 5 )
text = "First to make 3 points win!"
align = 1
valign = 1

[node name="CountdownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="body_entered" from="AreaL" to="." method="_on_AreaL_body_entered"]
[connection signal="body_entered" from="AreaR" to="." method="_on_AreaR_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Player"]
